[project]
name = "earthquake-rescue-openenv"
version = "1.0.0"
description = "OpenEnv earthquake rescue environment"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "numpy==1.26.4",
  "PyYAML==6.0.1",
  "httpx==0.27.0",
  "python-dotenv==1.0.1",
  "openai==1.30.1",
]

[project.scripts]
server = "api.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
