[project]
name = "earthquake-rescue-openenv"
version = "1.0.0"
description = "OpenEnv earthquake rescue environment"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "numpy==1.26.4",
  "PyYAML==6.0.1",
  "httpx==0.27.0",
  "python-dotenv==1.0.1",
  "openai>=2.7.2,<3",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = [
  "inference",
  "grader_easy",
  "grader_medium",
  "grader_hard",
  "task_easy",
  "task_medium",
  "task_hard",
  "task_registry",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "api.*", "env", "env.*", "graders", "graders.*", "models", "models.*", "server", "server.*", "tasks", "tasks.*"]

[tool.setuptools.package-data]
tasks = ["*.yaml"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
